...
                imageStyle={styles.xamanAppBackground}
                resizeMode="cover"
                style={styles.container}
            >
                <ReviewHeader transaction={transaction} onClose={onClose} />
                <KeyboardAwareScrollView
                    testID="review-content-container"
                    contentContainerStyle={styles.keyboardAvoidContainerStyle}
                    style={AppStyles.flex1}
                    scrollEnabled={canScroll}
                >
                    {mustStillWarn && (
                        <View style={[
...
                                                        />
                                                        <Spacer size={15} />
                                                    </>
                                                )}
                                                {canSendFee && (
                                                    <SwipeButton
                                                        testID="accept-button"
                                                        color={this.getSwipeButtonColor()}
                                                        isLoading={isLoading}
                                                        isDisabled={!isReady}
                                                        onSwipeSuccess={
                                                            isScamCounterpart ? this.onScamAcceptSwipe : onAccept
                                                        }
...
