...

        return (
            <ActionPanel
                height={contentHeight}
                onSlideDown={this.onPanelSlideDown}
                ref={this.actionPanelRef}
                testID="switch-network-overlay"
            >
                <View style={AppStyles.paddingBottomSml}>
                    <Text numberOfLines={1} style={AppStyles.h5}>
                        {Localize.t('global.networks')}
                    </Text>
                </View>
...
