...
    };

    render() {
        const { coreSettings, profile } = this.state;

        return (
            <View testID="advanced-settings-screen" style={styles.container}>
                <Header
                    leftComponent={{
                        testID: 'back-button',
                        icon: 'IconChevronLeft',
                        onPress: Navigator.pop,
                    }}
...
