...
            }
            : {
                // Nada for `View`
            };

        return (
            <View testID="home-tab-view" style={AppStyles.tabContainer}>
                {/* Header */}
                <View style={styles.headerContainer}>{this.renderHeader()}</View>

                {/* Monetization */}
                <Fragment key="monetization">
                    <MonetizationElement style={styles.monetizationContainer} />
...
